@@ -1,3 +1,12 @@
+2004-11-21  Andy Wingo  <wingo@pobox.com>
+
+	* examples/Makefile.am (EXTRA_DIST): Dist all scm files.
+
+2004-11-16  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/glib-support.c: Indentation, only get iochannel_type
+	when the func is first called.
+
 2004-11-15  Andy Wingo  <wingo@pobox.com>
 
 	* gnome/gw/glib-support.c: Fix includes.
